--- a/config/database.yml
+++ b/config/database.yml
@@ -51,5 +51,5 @@ production:
   <<: *default
   database: chat-space_production
   username: root
-  password: <%= ENV['DATABASE_PASSWORD'] %>
-  socket: /var/lib/mysql.sock
+  password: <%= ENV['tfhj1026'] %>
+  socket: /var/lib/mysql/mysql.sock
